@anwala ready for grading.

--- a/hw2/HW2_Report.ipynb
+++ b/hw2/HW2_Report.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "16y7vyuaE6BVQmNfq4_1IOl1T1z1cDp5s",
-      "authorship_tag": "ABX9TyMgYoHx5+N7J/LQL0ibI2ol",
+      "authorship_tag": "ABX9TyN6bIRIH4KAJpK2AbSDJwOw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,7 +199,8 @@
     {
       "cell_type": "code",
       "source": [
-        "list(nx.connected_components(G))"
+        "#list(nx.connected_components(G))\n",
+        "#tagged out because of printed list format"
       ],
       "metadata": {
         "id": "qpyUAsHLx-8s"
