--- a/Natural Language Processing Final/Josh_Rogers_NLP_Final.ipynb
+++ b/Natural Language Processing Final/Josh_Rogers_NLP_Final.ipynb
@@ -135,6 +135,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "![\\label{fig:web-growth}](https://github.com/JoshARogers/Misc/blob/main/Screenshot%202023-05-15%20at%2010.46.01%20PM.png?raw=true)"
+      ],
+      "metadata": {
+        "id": "iTZ3hIChe5n2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Sentiment of Political Parties"
       ],
       "metadata": {
@@ -285,6 +294,15 @@
         "fig.update_layout(title_text='Distribution of Sentiment in Tweets')\n",
         "fig.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![\\label{fig:web-growth}](https://github.com/JoshARogers/Misc/blob/main/Screenshot%202023-05-15%20at%2010.46.31%20PM.png?raw=true)"
+      ],
+      "metadata": {
+        "id": "k3kQLwl-eveQ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2371,7 +2389,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1tMUPy_Bw_5Y1QU2-v0pr73eSQPQDf0pa",
-      "authorship_tag": "ABX9TyOUO8klsnYg3XXl53ltHiNI",
+      "authorship_tag": "ABX9TyPc4ErN+AVYQZrdQbI1awRI",
       "include_colab_link": true
     },
     "gpuClass": "standard",
