@JamesMTucker ready for review

--- a/Natural Language Processing Final/Josh_Rogers_NLP_Final.ipynb
+++ b/Natural Language Processing Final/Josh_Rogers_NLP_Final.ipynb
@@ -365,7 +365,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Applying the noun and adjective function set up in imports and functions"
+        "Applying the noun and adjective function created in imports and functions"
       ],
       "metadata": {
         "id": "Gyc5atg0loB3"
@@ -2389,7 +2389,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1tMUPy_Bw_5Y1QU2-v0pr73eSQPQDf0pa",
-      "authorship_tag": "ABX9TyPc4ErN+AVYQZrdQbI1awRI",
+      "authorship_tag": "ABX9TyOj3JeYOSNBBz5A8gKxHwap",
       "include_colab_link": true
     },
     "gpuClass": "standard",
